samples/_failures_safe/1761668949_031f2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2daf392c.c: In function ‘main’:
./samples/SAFE/__tmp_2daf392c.c:167:15: error: expected ‘)’ at end of input
  167 |     if (result
      |        ~      ^
      |               )
./samples/SAFE/__tmp_2daf392c.c:167:5: error: expected declaration or statement at end of input
  167 |     if (result
      |     ^~
